Added meta description

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Seodoneright</title>
+    <title>Seodoneright 2017</title>
+  <title><%= @meta_title ? @meta_title : ApplicationController::BRAND_NAME %></title>
+   <% if @meta_description.present? %>
+ <meta name=”description” content=”<%= @meta_description %>”>
+ <% end %>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
